# nnamm.work

./: .gitignore  README.md  pelicanconf.py  pyproject.toml  requirements.txt
_org_content/extra/: robots.txt
_org_content/pages/: privacy-policy.md
_org_content/posts/: 004_200429.md  007_200607.md  008_201030.md  009_210530.md  012_220617.md  013_220619.md
archetypes/: default.md
assets/css/: custom.css
config/_default/: config.toml  languages.ja.toml  markup.toml  menus.ja.toml  params.toml
content/about/: index.md
content/pages/: about.md
content/posts/: 001_200322.md  002_200329.md  003_200405.md  004_200429.md  005_200504.md  006_200518.md  007_200607.md  008_201030.md  009_210530.md  010_210530.md  011_220616.md  013_220619.md  014_220711.md  014_220712.md
content/privacy-policy/: index.md
i18n/: ja.yaml
layouts/partials/: article-pagination.html
output_dev/: categories.html  index.html  index2.html  index3.html  sitemap.xml  tags.html
output_dev/author/: hua-cun-gui-shi-takashi-hanamura.html  hua-cun-gui-shi-takashi-hanamura2.html  hua-cun-gui-shi-takashi-hanamura3.html
output_dev/category/: blender.html  creative.html  diary.html  golang.html  macos.html  photography.html  python.html
output_dev/feeds/: all.rss.xml  blender.rss.xml  creative.rss.xml  diary.rss.xml  golang.rss.xml  macos.rss.xml  photography.rss.xml  python.rss.xml
output_dev/tag/: apple.html  art28mm.html  blender.html  coding.html  goland.html  golang.html  gridsome.html  icloud.html  macos.html  metal.html  mind.html  parallels.html  pycharm.html  python.html  sdquattroh.html  sigma.html  tailwindcss.html  vuejs.html
public/: 404.html  index.html  index.json  index.xml  robots.txt  sitemap.xml
public/about/: index.html
public/blog/: index.html  index.xml
public/categories/: index.html  index.xml
public/css/: main.bundle.min.a71708d3d0f2e91e15a10cba70bbcad8f0c3690c3b7619028c1e2d487f40d19f205cfcc89486d68a1fca7a06cff0ae655e9c2fdf96906df68c915f65d5362abe.css  (+1 more)
public/privacy-policy/: index.html
public/tags/: index.html  (+1 more)
theme/: .stylelintrc  package-lock.json  package.json  tailwind.config.js
(+78 files in other folders)
