[tool.poetry]
name = "nnamm.work"
version = "1.0.0"
description = "My portfolio site"
authors = ["nnamm <t.nnamm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.7.2"
pelican-image-process = "^2.1.3"
pelican-jinja-filters = "^2.1.1"
pelican-sitemap = "^1.0.2"
Markdown = "^3.3.7"
markdown-cjk-spacing = "^0.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pylint = "^2.9.6"
black = "^22.3.0"
pyproject-flake8 = "^0.0.1-alpha.4"
isort = "^5.10.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = "E203, W503"

[mypy]
ignore_missing_imports = 1
