[tool.poetry]
name = "nnamm.work"
version = "1.0.0"
description = "My portfolio site"
authors = ["nnamm <t.nnamm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.7.2"
pelican-image-process = "^2.1.3"
pelican-jinja-filters = "^2.1.1"
pelican-sitemap = "^1.0.2"
Markdown = "^3.3.7"
markdown-cjk-spacing = "^0.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 88

[flake8]
max-line-length = 88
max-complexity = 20
extend-ignore = [
    "W503", "W504",
]

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
#[[tool.mypy.overrides]]

[tool.pylint.messages_control]
max-line-length = 88
